# tetris

./: .gitignore  00_core.ipynb  01_piece.ipynb  02_playfield.ipynb  03_piece_loader.ipynb  04_controller.ipynb  05_renderer.ipynb  Makefile  README.md  index.ipynb  main.ipynb  main.py  pyproject.toml  settings.ini
data/: j  l  s  t  z
docs/: _config.yml  controller.html  core.html  index.html  main.html  piece.html  piece_loader.html  playfield.html  renderer.html  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
tetris/: _nbdev.py  controller.py  core.py  piece.py  piece_loader.py  playfield.py  renderer.py
