[tool.poetry]
name = "tetris"
version = "0.1.0"
description = ""
authors = ["Bobby Boyd <b+git@anarchist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
svgwrite = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
nbdev = "^1.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
